syntax = "proto3";

package go.micro.srv.notes;

service Notes {
	rpc List(ListNotesRequest) returns (ListNotesResponse);
	rpc Create(CreateNoteRequest) returns (CreateNoteResponse);
	rpc Delete(DeleteNoteRequest) returns (DeleteNoteResponse);
	rpc Update(UpdateNoteRequest) returns (UpdateNoteResponse);
	rpc UpdateStream(stream UpdateNoteRequest) returns (UpdateNoteResponse);
}

message Note {
	string id = 1;
	int64 created = 2;
	string title = 3;
	string text = 4;
}

message CreateNoteRequest {
	Note note = 1;
}

message CreateNoteResponse {
	Note note = 1;
}

message UpdateNoteRequest {
	Note note = 1;
}

message UpdateNoteResponse {}

message DeleteNoteRequest {
	Note note = 1;
}

message DeleteNoteResponse {}

message ListNotesRequest {}

message ListNotesResponse {
	repeated Note notes = 1;
}